cmake_minimum_required(VERSION 3.21)
project(CppCotePractice)

set(CMAKE_CXX_STANDARD 14)



add_executable(Section2_Sort_BinarySearch_TwoPoiontAlgorithm_Stack_Sum_of_Successive_Numbers_Sum_of_Successive_Numbers Section2_Sort_BinarySearch_TwoPoiontAlgorithm_Stack/Sum_of_Successive_Numbers/Sum_of_Successive_Numbers.cpp Section2_Sort_BinarySearch_TwoPoiontAlgorithm_Stack/Binary_Search/Binary_Search.cpp)