cmake_minimum_required(VERSION 3.21)
project(CppCotePractice)

set(CMAKE_CXX_STANDARD 14)



add_executable(Section2_Sort_BinarySearch_TwoPoiontAlgorithm_Stack_Choosing_Territory_small_Choosing_Territory_small Section2_Sort_BinarySearch_TwoPoiontAlgorithm_Stack/Choosing_Territory_small/Choosing_Territory_small.cpp)